[package]
name = "otpx"
version = "0.1.0"
edition = "2024"
authors = ["柒 <linqi0201@hotmail.com>"]
description = "RFC 4226 & RFC 6238 compatible OTP (One-Time Password) implementation"
readme = "README.md"
license = "MIT"
repository = "https://github.com/lin1328/otpx"
keywords = ["otp", "totp", "hotp", "authentication", "2fa", "rfc6238"]
categories = ["authentication", "cryptography"]

[dependencies]
data-encoding = { version = "2.9", default-features = false, features = ["alloc"] }
hmac = "0.12"
sha1 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
zeroize = { version = "1.8", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
rand = "0.9"
serde_json = "1.0"

[features]
steam = []
zeroize = ["dep:zeroize"]
serde = ["dep:serde"]

[profile.bench]
debug = true
